objects/Tstatus__c.object
<CustomObject>
    <description>This will hold the history of ticket status
This maintains the state of the ticket such as checked in, checked out and the times
we can have multiple checkins and checkouts -</description>
    <fields>
        <fullName>Device_Name__c</fullName>
        <label>Device Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scan_source__c</fullName>
        <label>Scan source</label>
        <picklist>
            <picklistValues>
                <fullName>Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scan Attendee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ticket__c</fullName>
        <label>Ticket</label>
        <referenceTo>Ticket__c</referenceTo>
        <relationshipName>Tstatus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tstatus_name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tstatus_name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scan_time__c</fullName>
        <label>scan time</label>
        <type>DateTime</type>
    </fields>
    <label>BLN Tstatus</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ticket__c</columns>
        <columns>Tstatus_name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TS-{000000}</displayFormat>
        <label>Tstatus Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Tstatus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>